[gd_scene load_steps=6 format=3 uid="uid://d11vi7l633jge"]

[ext_resource type="Script" path="res://Assets/Scenes/Levels/Scripts/level_4.gd" id="1_toi35"]
[ext_resource type="PackedScene" uid="uid://dvx6liqfnkicw" path="res://Assets/Scenes/main_player.tscn" id="2_84134"]
[ext_resource type="PackedScene" uid="uid://bgx0tbwy70w08" path="res://Assets/Scenes/Objects/portal.tscn" id="3_hoyiw"]
[ext_resource type="PackedScene" uid="uid://dxg1ssbr0kf13" path="res://Assets/Scenes/Objects/wall.tscn" id="4_pstj5"]
[ext_resource type="MeshLibrary" uid="uid://rynwpbym8ymg" path="res://Assets/Scenes/Objects/FloorCeilingTileMap.tres" id="5_k382y"]

[node name="level_4" type="Node3D"]
script = ExtResource("1_toi35")

[node name="MainPlayer" parent="." instance=ExtResource("2_84134")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.35221, 1.63636, -8.66219)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.600057, 0.799957, 0, -0.799957, 0.600057, 0, 0, 0)

[node name="Portal1" parent="." instance=ExtResource("3_hoyiw")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.70236, 1.60355, 2.23817)

[node name="Portal2" parent="." instance=ExtResource("3_hoyiw")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.68413, 1.60355, 2.23817)

[node name="Walls" type="Node3D" parent="."]

[node name="Wall1" parent="Walls" instance=ExtResource("4_pstj5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 2)

[node name="Wall2" parent="Walls" instance=ExtResource("4_pstj5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -2)

[node name="Wall3" parent="Walls" instance=ExtResource("4_pstj5")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2, 0, 2)

[node name="Wall4" parent="Walls" instance=ExtResource("4_pstj5")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2, 0, 2)

[node name="Wall5" parent="Walls" instance=ExtResource("4_pstj5")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 2, 0, -2)

[node name="Wall6" parent="Walls" instance=ExtResource("4_pstj5")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -2, 0, 2)

[node name="Wall7" parent="Walls" instance=ExtResource("4_pstj5")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2, 0, -2)

[node name="Wall8" parent="Walls" instance=ExtResource("4_pstj5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 2)

[node name="Wall9" parent="Walls" instance=ExtResource("4_pstj5")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2, 0, 2)

[node name="Wall10" parent="Walls" instance=ExtResource("4_pstj5")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2, 0, -2)

[node name="GridMap" type="GridMap" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, -4)
mesh_library = ExtResource("5_k382y")
cell_size = Vector3(4, 4, 4)
data = {
"cells": PackedInt32Array(1, 1, 655360, 65535, 1, 655360, 65535, 65535, 655360, 1, 65535, 655360, 65535, 0, 655360, 0, 0, 655360, 0, 65535, 1441792, 1, 0, 1441792, 0, 1, 1441792, 65533, 65535, 1441792, 65532, 65535, 1441792, 65533, 65533, 0, 65533, 65534, 0, 65532, 65533, 0, 65532, 65534, 0, 65532, 0, 0, 65535, 65532, 0, 65534, 65532, 0, 65533, 65532, 0, 65532, 65532, 0, 65532, 6, 0, 65530, 2, 0, 131067, 65532, 524288, 131063, 65529, 524288, 131063, 65530, 524288, 131063, 65531, 524288, 131063, 65532, 524288, 131063, 65533, 524288, 131063, 65534, 524288, 131063, 65535, 524288, 131063, 0, 524288, 131063, 1, 524288, 131063, 2, 524288, 131063, 3, 524288, 131063, 4, 524288, 131063, 5, 524288, 131063, 6, 524288, 131063, 7, 524288, 131063, 8, 524288, 131063, 9, 524288, 131064, 65529, 524288, 131064, 65530, 524288, 131064, 65531, 524288, 131064, 65532, 524288, 131064, 65533, 524288, 131064, 65534, 524288, 131064, 65535, 524288, 131064, 0, 524288, 131064, 1, 524288, 131064, 2, 524288, 131064, 3, 524288, 131064, 4, 524288, 131064, 5, 524288, 131064, 6, 524288, 131064, 7, 524288, 131064, 8, 524288, 131064, 9, 524288, 131065, 65529, 524288, 131065, 65530, 524288, 131065, 65531, 524288, 131065, 65532, 524288, 131065, 65533, 524288, 131065, 65534, 524288, 131065, 65535, 524288, 131065, 0, 524288, 131065, 1, 524288, 131065, 2, 524288, 131065, 3, 524288, 131065, 4, 524288, 131065, 5, 524288, 131065, 6, 524288, 131065, 7, 524288, 131065, 8, 524288, 131065, 9, 524288, 131066, 65529, 524288, 131066, 65530, 524288, 131066, 65531, 524288, 131066, 65532, 524288, 131066, 65533, 524288, 131066, 65534, 524288, 131066, 65535, 524288, 131066, 0, 524288, 131066, 1, 524288, 131066, 2, 524288, 131066, 3, 524288, 131066, 4, 524288, 131066, 5, 524288, 131066, 6, 524288, 131066, 7, 524288, 131066, 8, 524288, 131066, 9, 524288, 131067, 65529, 524288, 131067, 65530, 524288, 131067, 65531, 524288, 131067, 65533, 524288, 131067, 65534, 524288, 131067, 65535, 524288, 131067, 0, 524288, 131067, 1, 524288, 131067, 2, 524288, 131067, 3, 524288, 131067, 4, 524288, 131067, 5, 524288, 131067, 6, 524288, 131067, 7, 524288, 131067, 8, 524288, 131067, 9, 524288, 131068, 65529, 524288, 131068, 65530, 524288, 131068, 65531, 524288, 131068, 65532, 524288, 131068, 65533, 524288, 131068, 65534, 524288, 131068, 65535, 524288, 131068, 0, 524288, 131068, 1, 524288, 131068, 2, 524288, 131068, 3, 524288, 131068, 4, 524288, 131068, 5, 524288, 131068, 6, 524288, 131068, 7, 524288, 131068, 8, 524288, 131068, 9, 524288, 131069, 65529, 524288, 131069, 65530, 524288, 131069, 65531, 524288, 131069, 65532, 524288, 131069, 65533, 524288, 131069, 65534, 524288, 131069, 65535, 524288, 131069, 0, 524288, 131069, 1, 524288, 131069, 2, 524288, 131069, 3, 524288, 131069, 4, 524288, 131069, 5, 524288, 131069, 6, 524288, 131069, 7, 524288, 131069, 8, 524288, 131069, 9, 524288, 131070, 65529, 524288, 131070, 65530, 524288, 131070, 65531, 524288, 131070, 65532, 524288, 131070, 65533, 524288, 131070, 65534, 524288, 131070, 65535, 524288, 131070, 0, 524288, 131070, 1, 524288, 131070, 2, 524288, 131070, 3, 524288, 131070, 4, 524288, 131070, 5, 524288, 131070, 6, 524288, 131070, 7, 524288, 131070, 8, 524288, 131070, 9, 524288, 131071, 65529, 524288, 131071, 65530, 524288, 131071, 65531, 524288, 131071, 65532, 524288, 131071, 65533, 524288, 131071, 65534, 524288, 131071, 65535, 524288, 131071, 0, 524288, 131071, 1, 524288, 131071, 2, 524288, 131071, 3, 524288, 131071, 4, 524288, 131071, 5, 524288, 131071, 6, 524288, 131071, 7, 524288, 131071, 8, 524288, 131071, 9, 524288, 65536, 65529, 524288, 65536, 65530, 524288, 65536, 65531, 524288, 65536, 65532, 524288, 65536, 65533, 524288, 65536, 65534, 524288, 65536, 65535, 524288, 65536, 0, 524288, 65536, 1, 524288, 65536, 2, 524288, 65536, 3, 524288, 65536, 4, 524288, 65536, 5, 524288, 65536, 6, 524288, 65536, 7, 524288, 65536, 8, 524288, 65536, 9, 524288, 65537, 65529, 524288, 65537, 65530, 524288, 65537, 65531, 524288, 65537, 65532, 524288, 65537, 65533, 524288, 65537, 65534, 524288, 65537, 65535, 524288, 65537, 0, 524288, 65537, 1, 524288, 65537, 2, 524288, 65537, 3, 524288, 65537, 4, 524288, 65537, 5, 524288, 65537, 6, 524288, 65537, 7, 524288, 65537, 8, 524288, 65537, 9, 524288, 65538, 65529, 524288, 65538, 65530, 524288, 65538, 65531, 524288, 65538, 65532, 524288, 65538, 65533, 524288, 65538, 65534, 524288, 65538, 65535, 524288, 65538, 0, 524288, 65538, 1, 524288, 65538, 2, 524288, 65538, 3, 524288, 65538, 4, 524288, 65538, 5, 524288, 65538, 6, 524288, 65538, 7, 524288, 65538, 8, 524288, 65538, 9, 524288, 65539, 65529, 524288, 65539, 65530, 524288, 65539, 65531, 524288, 65539, 65532, 524288, 65539, 65533, 524288, 65539, 65534, 524288, 65539, 65535, 524288, 65539, 0, 524288, 65539, 1, 524288, 65539, 2, 524288, 65539, 3, 524288, 65539, 4, 524288, 65539, 5, 524288, 65539, 6, 524288, 65539, 7, 524288, 65539, 8, 524288, 65539, 9, 524288, 65540, 65529, 524288, 65540, 65530, 524288, 65540, 65531, 524288, 65540, 65532, 524288, 65540, 65533, 524288, 65540, 65534, 524288, 65540, 65535, 524288, 65540, 0, 524288, 65540, 1, 524288, 65540, 2, 524288, 65540, 3, 524288, 65540, 4, 524288, 65540, 5, 524288, 65540, 6, 524288, 65540, 7, 524288, 65540, 8, 524288, 65540, 9, 524288, 65541, 65529, 524288, 65541, 65530, 524288, 65541, 65531, 524288, 65541, 65532, 524288, 65541, 65533, 524288, 65541, 65534, 524288, 65541, 65535, 524288, 65541, 0, 524288, 65541, 1, 524288, 65541, 2, 524288, 65541, 3, 524288, 65541, 4, 524288, 65541, 5, 524288, 65541, 6, 524288, 65541, 7, 524288, 65541, 8, 524288, 65541, 9, 524288, 65542, 65529, 524288, 65542, 65530, 524288, 65542, 65531, 524288, 65542, 65532, 524288, 65542, 65533, 524288, 65542, 65534, 524288, 65542, 65535, 524288, 65542, 0, 524288, 65542, 1, 524288, 65542, 2, 524288, 65542, 3, 524288, 65542, 4, 524288, 65542, 5, 524288, 65542, 6, 524288, 65542, 7, 524288, 65542, 8, 524288, 65542, 9, 524288)
}
metadata/_editor_floor_ = Vector3(0, -2, 0)

[node name="Location1" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.3757, 1.63541, -1.4903)

[node name="Location2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.79751, 1.63541, 0.568331)
